--- a/css/auth-form.css
+++ b/css/auth-form.css
@@ -15,7 +15,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #123454;
+    background: #ffffff;
 }
 
 .auth__container {
