--- a/css/auth-form.css
+++ b/css/auth-form.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Avenir";
+    src: url("../fonts/avenirnextcyr-regular.ttf");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -15,29 +20,27 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
+    background: #53b6fd;
 }
 
 .auth__container {
-    width: 480px;
-    padding: 40px;
+    width: 400px;
+    padding: 12px 36px 34px;
     background: #ffffff;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.08), 0px 9px 14px rgba(0, 0, 0, 0.12), 0px 40px 72px rgba(0, 0, 0, 0.2);
-    border-radius: 16px;
+    border-radius: 9px;
 }
 
 .auth__menu {
-    width: 50%;
-    margin: 0 auto;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .auth__link {
     padding: 0 5px;
-    text-transform: uppercase;
-    font-family: "Arial", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -48,7 +51,6 @@ a {
 
 .auth__link.active {
     color: #000000;
-    border-bottom: 1px solid #000;
 }
 
 .auth__body {
@@ -61,14 +63,13 @@ a {
 
 .auth__form {
     width: 100%;
-    padding: 30px 0 40px 0;
-    border-bottom: 1px solid black;
+    padding: 30px 0 0 0;
 }
 
 .auth__label {
     position: relative;
     display: block;
-    padding: 0 0 25px 0;
+    padding: 0 0 8px 0;
 }
 
 .auth__eye {
@@ -95,13 +96,11 @@ a {
 }
 
 .auth__label span:first-child {
-    padding: 0 8px;
-    text-transform: uppercase;
-    font-family: "Arial", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 15px;
     letter-spacing: 0.5px;
     color: #000000;
 }
@@ -116,15 +115,14 @@ a {
     background: #ffffff;
     border: none;
     outline: none;
-    box-shadow: 0px 0px 0px 1px rgba(151, 151, 151, 0.08), 0px 1px 3px rgba(151, 151, 151, 0.12),
-        0px 1px 24px rgba(151, 151, 151, 0.21);
-    border-radius: 8px;
-    font-family: Arial, sans-serif;
+    border: 1px solid #53b6fd;
+    border-radius: 5px;
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 24px;
-    color: #979797;
+    color: #000000;
 }
 
 .auth__label.is-error input[type="text"],
@@ -153,22 +151,22 @@ a {
     padding: 0;
     display: flex;
     align-items: center;
-    font-family: "Arial", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    color: #979797;
+    font-size: 12px;
+    line-height: 15px;
+    color: #53b6fd;
 }
 
 .auth__checkbox span::before {
     content: "";
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 11px;
+    height: 11px;
     margin-right: 10px;
     background-image: url("../images/auth-checkbox-off.svg");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -185,21 +183,22 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #979797;
+    background: #53b6fd;
     border: none;
     outline: none;
-    border-radius: 14px;
+    border-radius: 7px;
     cursor: pointer;
-    font-family: "Arial", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 20px;
     text-align: center;
     color: #ffffff;
 }
 .auth__btn:hover {
-    filter: brightness(1.15);
+    background: rgba(83, 182, 253, 0.21);
+    color: #53b6fd;
 }
 
 .auth__btn a {
@@ -214,13 +213,12 @@ a {
 
 .auth__forgot {
     display: block;
-    margin: 30px 0 0 0;
-    text-align: center;
+    margin: 0 0 18px 0;
     font-family: "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
-    line-height: 24px;
+    font-size: 10px;
+    line-height: 12px;
     color: rgba(9, 21, 15, 0.42);
 }
 
@@ -272,7 +270,7 @@ a {
 
     .auth__container {
         width: 85%;
-        max-width: 480px;
+        max-width: 400px;
         margin: 0 auto;
         padding: 20px;
     }
