--- a/css/home.css
+++ b/css/home.css
@@ -9,67 +9,11 @@
     background-position: right bottom;
 }
 
-.menu {
-    min-width: 305px;
-    height: 100vh;
-    padding: 35px 0px 38px 0px;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.menu__list a {
-    display: flex;
-    padding-left: 38px;
-}
-
-.menu__navigation li {
-    display: flex;
-    align-items: center;
-    height: 56px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: #53b6fd;
-}
-
-.menu__navigation li:hover::before {
-    display: block;
-}
-
-.menu__navigation li::before {
-    content: "";
-    display: none;
-    width: 9px;
-    height: 41px;
-    background: url(../images/home/marker-blue.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.menu__navigation svg {
-    margin-right: 12px;
-}
-
-.menu__active-user {
-    margin-top: auto;
-    padding-left: 38px;
-    padding-right: 42px;
-}
-
-.menu__active-user a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: #53b6fd;
-}
-
 .header {
-    width: 100%;
+    position: fixed;
+    top: 41px;
+    left: 388px;
+    width: 72%;
     display: flex;
     justify-content: space-between;
     font-weight: 600;
@@ -82,25 +26,55 @@
     width: 965px;
     margin-left: auto;
     margin-right: auto;
-    padding: 42px 0 51px 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    padding: 111px 0 51px 0;
 }
 
 .section__block {
     width: 100%;
-    height: 78%;
+    height: 90%;
     display: flex;
     justify-content: space-between;
 }
 
 .overdue-tasks {
     width: 470px;
-    padding: 17px 23px 37px 17px;
+    padding: 17px 23px 17px 17px;
     background-color: #ffffff;
     box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
     border-radius: 21px;
+}
+
+.overdue-tasks-inner {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.overdue-tasks-inner h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 33px;
+    color: #dc2e2e;
+}
+
+.overdue-tasks-inner a {
+    margin-top: auto;
+    align-self: center;
+}
+
+.no-tasks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+
+    color: #53b6fd;
+
+    opacity: 0.33;
 }
 
 .right-sections {
@@ -111,16 +85,54 @@
 }
 
 .my-projects {
-    height: 413px;
+    height: 75%;
     padding: 17px 17px 17px 20px;
+    margin-bottom: 37px;
     background-color: #ffffff;
     box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
     border-radius: 21px;
 }
 
+.my-projects-inner {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.my-projects-inner h1 {
+    margin-top: 20px;
+    margin-bottom: 23px;
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 33px;
+    color: #53b6fd;
+}
+
+.my-projects-inner a {
+    align-self: center;
+    margin-top: auto;
+}
+
 .chat {
     height: 156px;
+    padding: 17px 55px 37px 28px;
     background-color: #ffffff;
     box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
     border-radius: 21px;
+}
+
+.chat h1 {
+    margin-bottom: 18px;
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 33px;
+    color: #53b6fd;
+}
+
+.chat__inner {
+    display: flex;
+}
+
+.chat__inner a {
+    margin-right: 30px;
 }
