--- a/css/mytasks.css
+++ b/css/mytasks.css
@@ -9,6 +9,39 @@
     background-position: right bottom;
 }
 
+.addtask {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 17px;
+    box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
+    position: absolute;
+    width: max-content;
+    z-index: 999;
+}
+
+.warning__wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.warning {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 17px;
+    box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
+    width: max-content;
+    z-index: 9999999999;
+}
+
 .addtaskbtn {
     padding: 0;
     display: flex;
