--- a/css/mytasks.css
+++ b/css/mytasks.css
@@ -9,6 +9,51 @@
     background-position: right bottom;
 }
 
+.tasks__filter {
+    width: max-content;
+    position: absolute;
+    top: 120%;
+    right: 0;
+    padding: 20px 30px;
+    background: #ffffff;
+    border-radius: 17px;
+    box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
+    z-index: 999;
+}
+
+.tasks__filter a:first-child {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #53b6fd;
+}
+
+.tasks__filter a:nth-child(2) {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #44c869;
+}
+
+.tasks__filter a:nth-child(3) {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #dc2e2e;
+}
+
+.tasks__filter-btn {
+    margin-left: auto;
+    cursor: pointer;
+    position: relative;
+}
+
 .addtask {
     display: flex;
     flex-direction: column;
@@ -17,8 +62,37 @@
     border-radius: 17px;
     box-shadow: 5px 5px 25px rgba(43, 144, 218, 0.25);
     position: absolute;
-    width: max-content;
+    width: 544px;
     z-index: 999;
+}
+
+.addtask input {
+    width: 100%;
+    height: 59px;
+    padding: 20px 24px;
+    border: 1.5px solid #53b6fd;
+    border-radius: 11px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #53b6fd;
+    opacity: 0.55;
+    background-color: transparent;
+}
+
+.buttons__block {
+    display: flex;
+    justify-content: space-between;
+}
+
+input#inputText {
+    color: black;
+}
+
+::-webkit-input-placeholder {
+    color: #53b6fd;
 }
 
 .warning__wrapper {
@@ -58,7 +132,7 @@
 }
 
 .tasks {
-    width: 969px;
+    max-width: 969px;
     height: 100%;
     padding: 17px 23px 17px 17px;
     background-color: #ffffff;
