--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,13 @@ ul li {
     line-height: 44px;
     text-align: center;
     color: #ffffff;
+    cursor: pointer;
+    border: none;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .btn:hover {
