--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,4 @@
+
 .bootstrap-header {
     color: #53b6fd;
 }
@@ -6,7 +7,6 @@
     padding-left: 0;
     padding-right: 0;
     font-family: "Montserrat", sans-serif;
-    background-color: #dbf0ff;
 }
 
 .menu-item {
@@ -15,6 +15,7 @@
 
 .projects__card {
     background-color: #ffffff;
+    height: 350px;
 }
 
 .active-user {
