--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 @import "mytasks.css";
 @import "projects.css";
 
+:root {
+    --color1: #53B6FD;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -25,6 +29,10 @@ img {
 
 ul li {
     list-style: none;
+}
+
+body {
+    background-color: #dbf0ff;
 }
 
 .btn {
