--- a/css/mytasks.css
+++ b/css/mytasks.css
@@ -1,4 +1,58 @@
-.mytasks__wrapper {
+
+
+
+.mytasks {
+    background: url(../images/mytasks/mytasks-background.png);
+    background-repeat: no-repeat;
+    background-position: right bottom!important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .mytasks__wrapper {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -153,4 +207,4 @@ input#inputText {
     justify-content: space-between;
     border-bottom: 1px solid rgba(83, 182, 253, 0.21);
     padding-bottom: 14px;
-}
+} */
