--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "mytasks.css";
 @import "projects.css";
 @import "bootstrap-datepicker3.min.css";
+@import "404.css";
 
 :root {
     --color1: #53B6FD;
