--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "projects.css";
 @import "bootstrap-datepicker3.min.css";
 @import "404.css";
+@import "jquery.dm-uploader.min.css";
 
 :root {
     --color1: #53B6FD;
